# HamsterHack

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
guide/: README.md
src/: config.py  endpoints.py  main.py
src/models/: __init__.py  account_info.py  boosts_for_buy.py  clicker_user.py  list_task.py  upgrades_for_buy.py
